<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingPage">

    <TextView
        android:id="@+id/votdReference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:textColor="@color/white"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:gravity="bottom|center"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:minHeight="150dp"
        android:textStyle="bold"
        android:text="@string/action_settings"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_below="@id/votdReference">

        <TextView
            android:id="@+id/lbl_translation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/abc_text_size_body_2_material"
            android:text="@string/settings_translation"
            android:layout_alignParentLeft="true"/>

        <Spinner
            android:id="@+id/translations_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/lbl_translation"/>

        <LinearLayout
            android:id="@+id/InnerRelativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnSettingsSave"
                android:text="@string/settings_save"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:onClick="saveSettings"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/data_from"
                android:text="@string/made_by"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="@dimen/activity_vertical_margin"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>