<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/left_drawer"
    android:layout_width="240dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:choiceMode="singleChoice"
    android:divider="@android:color/transparent"
    android:dividerHeight="0dp"
    android:background="#111"
    tools:context=".LandingPage"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/primary_mid"
        android:id="@+id/logo_container"
        android:minHeight="150dp"
        android:clickable="true"
        android:onClick="openMain">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/logo_large"
            android:contentDescription="@string/logo_desc"
            android:id="@+id/logo_image" />

        <TextView
            android:text="@string/app_name"
            android:id="@+id/navBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:textSize="@dimen/abc_text_size_headline_material"
            android:gravity="center" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_settings"
        android:clickable="true"
        android:textColor="#fff"
        android:background="#000"
        android:layout_width="fill_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:singleLine="true"
        android:layout_height="wrap_content"
        android:text="@string/action_settings"
        android:onClick="openSettings"
        android:textAlignment="gravity"
        android:gravity="left" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <ListView
        android:id="@+id/navList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="#fff" />

</LinearLayout>