<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/main_page"
        android:id="@+id/main_body"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#111"
        tools:context=".LandingPage"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/primary_mid"
            android:id="@+id/logo_container"
            android:minHeight="150dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:src="@drawable/logo_large"
                android:contentDescription="@string/logo_desc"
                android:id="@+id/logo_image"/>

            <TextView
                android:text="@string/app_name"
                android:id="@+id/navBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:gravity="bottom|center"
                android:textSize="@dimen/abc_text_size_headline_material" />

        </LinearLayout>

        <TextView
            android:id="@+id/btn_settings"
            android:textColor="#fff"
            android:padding="5sp"
            android:layout_width="fill_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:singleLine="true"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/action_settings"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <ListView
            android:id="@+id/navList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#fff" />

    </LinearLayout>
</android.support.v4.widget.DrawerLayout>